<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TagLauncher</string>
    <string name="menu_settings">Settings</string>
    <string name="button_cancel">Cancel</string>
    <string name="action_bundle">Action Bundle</string>
    <string name="add_action_bundle">New Action Bundle</string>
    <string name="add_action_bundle_2">Add Action Bundle</string>
    <string name="delete_action_bundle">Delete Action Bundle</string>
    <string name="delete_action_bundle_q">Delete Action Bundle?</string>
    <string name="delete_action_bundle_dialog">%1$s will be deleted irreversibly!</string>
    <string name="duplicate_action_bundle">Duplicate Action Bundle</string>
    <string name="rename_action_bundle">Rename Action Bundle</string>
    <string name="delete">Delete</string>
    <string name="duplicate">Duplicate</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="add_action">Add Action</string>
    <string name="title_activity_activity_all_actions">All Actions</string>
    <string name="details">Details</string>
    <string name="copy_string">%1$s copy</string>
    <string name="restore_previous_volume">Recover previous volume</string>
    <string name="volume">Volume</string>
    <string name="apply">Apply</string>
    <string name="s_byte">%1$s Byte</string>
    <string name="s_byte_2">%1$s of %2$s Byte</string>
    <string name="write_ab_to_tag">Write data to tag</string>
    <string name="waiting_for_tag">Waiting for tag&#8230;</string>
    <string name="writing_to_tag">Writing data to tag&#8230;</string>
    <string name="writing_failed">Writing failed</string>
    <string name="cancel_write">Writing canceled</string>
    <string name="write_success">Writing successful</string>
    <string name="tag_too_small">The Action Bundle is to big for the tag as the tag can hold only %1$s Byte. Please use a bigger tag or reduce the size of the Action Bundle.</string>
    <string name="tag_execute_success">Action Bundle executed</string>
    <string name="tag_execute_failure">Error while executing the Action Bundle</string>
    <string name="first_run_dialog">Unfortunately your device isn\'t NFC capable. Therefore you can only create Action Bundles but not write them to NFC tags.</string>
    <string name="settings">Settings</string>
    <string name="skip">Skip</string>
    <string name="nfc_disabled_dialog">For the best experience with this app please enable NFC on this device.</string>
    <string name="no_nfc_support">Device doesn\'t support NFC</string>
    <string name="nfc_disabled">NFC is not enabled</string>
    <string name="writing_completed">Writing successful</string>
    <string name="no_tag_found">No tag found</string>
    <string name="tag_not_compatible">Tag isn\'t compatible with this device</string>
    <string name="tag_formatted_please_rescan">Tag was formatted. Please rescan tag</string>
    <string name="lost_connection_please_rescan">Lost tag connection. Please rescan tag</string>
    <string name="write_error_please_retry">Error while writing. Please retry</string>
    <string name="format_exception">FormatException: General error</string>
    <string name="generic_error">General error</string>
    <string name="connection_not_possible_please_retry">Connection to tag failed. Please retry</string>
    <string name="tag_write_protected">Tag is write protected and can\'t be written to</string>
    <string name="execute_action_bundle">Execute Action Bundle</string>
    <string name="tag_info">Tag Info</string>
    <string name="importAB">Import</string>
    <string name="execute">Execute</string>
    <string name="duplicate_error">Duplication failed</string>
    <string name="pref_show_executed_actions">Show actions after tag scan</string>
    <string name="pref_show_executed_actions_summary">Show Actions before executing tag</string>

    <string name="ac_bluetooth_on">Enable Bluetooth</string>
    <string name="ac_bluetooth_off">Disable Bluetooth</string>
    <string name="ac_bluetooth_toggle">Toggle Bluetooth</string>
    <string name="ac_ringer_normal">Volume %1$s</string>
    <string name="ac_ringer_vibrate">Vibrate</string>
    <string name="ac_ringer_silent">Mute</string>
    <string name="ac_media_volume">Media Volume %1$s</string>
    <string name="ac_wlan_on">Enable Wi-Fi</string>
    <string name="ac_wlan_off">Disable Wi-Fi</string>
    <string name="ac_wlan_toggle">Toggle Wi-Fi</string>
    <string name="ac_launch_app">Start %1$s</string>
    <string name="ac_media_play">Play music</string>
    <string name="ac_media_pause">Pause music</string>
    <string name="actions">Actions</string>
    <string name="done">Done</string>
</resources>