<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:support="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/write_ab_to_tag"
        android:icon="@drawable/ic_nfc_write_white_24dp"
        support:showAsAction="always"
        android:title="@string/write_ab_to_tag"/>
    <item
        android:id="@+id/duplicate_action_bundle"
        android:icon="@drawable/ic_content_copy_white_24dp"
        support:showAsAction="always"
        android:title="@string/duplicate"/>
    <item
        android:id="@+id/delete_action_bundle"
        android:icon="@drawable/ic_delete_white_24dp"
        support:showAsAction="always"
        android:title="@string/delete"/>
    <item
        android:id="@+id/execute_action_bundle"
        support:showAsAction="never"
        android:title="@string/execute_action_bundle"/>
    <item
        android:id="@+id/rename_action_bundle"
        support:showAsAction="never"
        android:title="@string/rename"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        support:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>